--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -5,6 +5,7 @@
     "com.unity.ads": "3.4.5",
     "com.unity.analytics": "3.3.5",
     "com.unity.collab-proxy": "1.2.16",
+    "com.unity.dots.editor": "0.7.0-preview.1",
     "com.unity.entities": "0.11.0-preview.7",
     "com.unity.ide.rider": "1.1.4",
     "com.unity.ide.vscode": "1.2.0",
