--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -5,11 +5,12 @@
     "com.unity.ads": "3.4.5",
     "com.unity.analytics": "3.3.5",
     "com.unity.collab-proxy": "1.2.16",
-    "com.unity.entities": "0.11.0-preview.7",
+    "com.unity.entities": "0.11.1-preview.4",
     "com.unity.ide.rider": "1.1.4",
     "com.unity.ide.vscode": "1.2.0",
     "com.unity.multiplayer-hlapi": "1.0.6",
     "com.unity.netcode": "0.2.0-preview.5",
+    "com.unity.physics": "0.4.0-preview.5",
     "com.unity.purchasing": "2.0.6",
     "com.unity.rendering.hybrid": "0.5.1-preview.18",
     "com.unity.test-framework": "1.1.14",
