Added resources for installing blender

--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,7 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+
+# Blender backup files
+*.blend[0-9]
+*.blend[0-9].meta
