Added Moq library using dlls

--- a/Assets/Tests/EditModeTests/EditModeTests.asmdef
+++ b/Assets/Tests/EditModeTests/EditModeTests.asmdef
@@ -19,7 +19,8 @@
     "allowUnsafeCode": true,
     "overrideReferences": true,
     "precompiledReferences": [
-        "nunit.framework.dll"
+        "nunit.framework.dll",
+        "Moq.dll"
     ],
     "autoReferenced": true,
     "defineConstraints": [
