Disabled activation and fixed main for build

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,38 +7,73 @@ on:
 env:
   UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
 
-  jobs:
-    build:
-      name: Build PropHunt ✨
-      runs-on: ubuntu-latest
-      steps:
-        # Checkout
-        - name: Checkout repository
-          uses: actions/checkout@v2
-          with:
+jobs:
+  testAllModes:
+    name: Test in ${{ matrix.testMode }} on version ${{ matrix.unityVersion }}
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        projectPath:
+          - ""
+        unityVersion:
+          - 2019.4.0f1
+        testMode:
+          # - playmode
+          - editmode
+    steps:
+      - uses: actions/checkout@v2
+        with:
           lfs: true
-
-        # Cache
-        - uses: actions/cache@v1.1.0
-          with:
-          path: Library
-          key: Library
-
-        # Test
-        - name: Run tests
-          uses: webbertakken/unity-test-runner@v1.4
-          with:
-          unityVersion: 2019.4.0f1
-
-        # Build
-        - name: Build project
-          uses: webbertakken/unity-builder@v0.10
-          with:
-          unityVersion: 2019.4.0f1
-          targetPlatform: Windows
-
-        # Output
-        # - uses: actions/upload-artifact@v1
-        #   with:
-        #     name: Build
-        #     path: build
+      - uses: actions/cache@v1.1.0
+        with:
+          path: ${{ matrix.projectPath }}/Library
+          key: Library-${{ matrix.projectPath }}
+          restore-keys: |
+            Library-
+      - uses: webbertakken/unity-test-runner@v1.4
+        id: tests
+        with:
+          projectPath: ${{ matrix.projectPath }}
+          unityVersion: ${{ matrix.unityVersion }}
+          testMode: ${{ matrix.testMode }}
+          artifactsPath: ${{ matrix.testMode }}-artifacts
+      - uses: actions/upload-artifact@v1
+        with:
+          name: Test results for ${{ matrix.testMode }}
+          path: ${{ steps.tests.outputs.artifactsPath }}
+  buildForSomePlatforms:
+    name: Build for ${{ matrix.targetPlatform }} on version ${{ matrix.unityVersion }}
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        projectPath:
+          - ""
+        unityVersion:
+          - 2019.4.0f1
+        targetPlatform:
+          - StandaloneOSX       # Build a macOS standalone (Intel 64-bit).
+          - StandaloneWindows   # Build a Windows standalone.
+          - StandaloneWindows64 # Build a Windows 64-bit standalone.
+          - StandaloneLinux64   # Build a Linux 64-bit standalone.
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          lfs: true
+      - uses: actions/cache@v1.1.0
+        with:
+          path: ${{ matrix.projectPath }}/Library
+          key: Library-${{ matrix.projectPath }}-${{ matrix.targetPlatform }}
+          restore-keys: |
+            Library-${{ matrix.projectPath }}-
+            Library-
+      - uses: webbertakken/unity-builder@<version>
+        with:
+          projectPath: ${{ matrix.projectPath }}
+          unityVersion: ${{ matrix.unityVersion }}
+          targetPlatform: ${{ matrix.targetPlatform }}
+      - uses: actions/upload-artifact@v1
+        with:
+          name: Build
+          path: build
