--- a/.github/workflows/build-dev.yml
+++ b/.github/workflows/build-dev.yml
@@ -1,49 +1,11 @@
-name: Main
+name: Build Development
 
 on:
   pull_request: {}
-  push: { branches: [master] }
-
-env:
-  UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
 
 jobs:
-  testAllModes:
-    name: Test in ${{ matrix.testMode }} on version ${{ matrix.unityVersion }}
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        projectPath:
-          - ""
-        unityVersion:
-          - 2019.4.0f1
-        testMode:
-          # - playmode
-          - editmode
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          lfs: true
-      - uses: actions/cache@v2
-        with:
-          path: ${{ matrix.projectPath }}/Library
-          key: Library-${{ matrix.projectPath }}
-          restore-keys: |
-            Library-
-      - uses: webbertakken/unity-test-runner@v1.4
-        id: tests
-        with:
-          projectPath: ${{ matrix.projectPath }}
-          unityVersion: ${{ matrix.unityVersion }}
-          testMode: ${{ matrix.testMode }}
-          artifactsPath: ${{ matrix.testMode }}-artifacts
-      - uses: actions/upload-artifact@v1
-        with:
-          name: Test results for ${{ matrix.testMode }}
-          path: ${{ steps.tests.outputs.artifactsPath }}
   buildClientForSomePlatforms:
-    name: Build for ${{ matrix.targetPlatform }} on version ${{ matrix.unityVersion }}
+    name: Build Client for ${{ matrix.targetPlatform }} on version ${{ matrix.unityVersion }}
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -73,13 +35,14 @@ jobs:
           projectPath: ${{ matrix.projectPath }}
           unityVersion: ${{ matrix.unityVersion }}
           targetPlatform: ${{ matrix.targetPlatform }}
-          buildsPath: build-${{ matrix.targetPlatform }}-Client
+          buildsPath: build-${{ matrix.targetPlatform }}-Client-Dev
+          customParameters: -Development
       - uses: actions/upload-artifact@v1
         with:
-          name: Build-${{ matrix.targetPlatform }}-Client
-          path: build-${{ matrix.targetPlatform }}-Client
+          name: Build-${{ matrix.targetPlatform }}-Client-Dev
+          path: build-${{ matrix.targetPlatform }}-Client-Dev
   buildServerForSomePlatforms:
-    name: Build for ${{ matrix.targetPlatform }} on version ${{ matrix.unityVersion }}
+    name: Build Server for ${{ matrix.targetPlatform }} on version ${{ matrix.unityVersion }}
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -109,9 +72,9 @@ jobs:
           projectPath: ${{ matrix.projectPath }}
           unityVersion: ${{ matrix.unityVersion }}
           targetPlatform: ${{ matrix.targetPlatform }}
-          buildsPath: build-${{ matrix.targetPlatform }}-Server
-          customParameters: -ServerBuild
+          buildsPath: build-${{ matrix.targetPlatform }}-Server-Dev
+          customParameters: -ServerBuild -Development
       - uses: actions/upload-artifact@v1
         with:
-          name: Build-${{ matrix.targetPlatform }}-Server
-          path: build-${{ matrix.targetPlatform }}-Server
+          name: Build-${{ matrix.targetPlatform }}-Server-Dev
+          path: build-${{ matrix.targetPlatform }}-Server-Dev
