Limited build-dev number of builds and added key file

--- a/.github/workflows/build-dev.yml
+++ b/.github/workflows/build-dev.yml
@@ -3,6 +3,9 @@ name: Build Development
 on:
   pull_request: {}
 
+env:
+  UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+
 jobs:
   buildClientForSomePlatforms:
     name: Build Client for ${{ matrix.targetPlatform }} on version ${{ matrix.unityVersion }}
@@ -15,10 +18,7 @@ jobs:
         unityVersion:
           - 2019.4.0f1
         targetPlatform:
-          - StandaloneOSX       # Build a macOS standalone (Intel 64-bit).
-          - StandaloneWindows   # Build a Windows standalone.
           - StandaloneWindows64 # Build a Windows 64-bit standalone.
-          - StandaloneLinux64   # Build a Linux 64-bit standalone.
     steps:
       - uses: actions/checkout@v2
         with:
@@ -52,10 +52,7 @@ jobs:
         unityVersion:
           - 2019.4.0f1
         targetPlatform:
-          - StandaloneOSX       # Build a macOS standalone (Intel 64-bit).
-          - StandaloneWindows   # Build a Windows standalone.
           - StandaloneWindows64 # Build a Windows 64-bit standalone.
-          - StandaloneLinux64   # Build a Linux 64-bit standalone.
     steps:
       - uses: actions/checkout@v2
         with:
