Changed server build flag

--- a/.github/workflows/build-dev.yml
+++ b/.github/workflows/build-dev.yml
@@ -70,7 +70,7 @@ jobs:
           unityVersion: ${{ matrix.unityVersion }}
           targetPlatform: ${{ matrix.targetPlatform }}
           buildsPath: build-${{ matrix.targetPlatform }}-Server-Dev
-          customParameters: -ServerBuild -Development
+          customParameters: -EnableHeadlessMode -Development
       - uses: actions/upload-artifact@v1
         with:
           name: Build-${{ matrix.targetPlatform }}-Server-Dev
