--- a/.github/workflows/build-dev.yml
+++ b/.github/workflows/build-dev.yml
@@ -7,8 +7,8 @@ env:
   UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
 
 jobs:
-  buildClientForSomePlatforms:
-    name: Build Client for ${{ matrix.targetPlatform }} on version ${{ matrix.unityVersion }}
+  buildForSomePlatforms:
+    name: Build ${{ matrix.buildType }} for ${{ matrix.platform }} on version ${{ matrix.unityVersion }}
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -17,8 +17,12 @@ jobs:
           - ""
         unityVersion:
           - 2019.4.0f1
-        targetPlatform:
-          - StandaloneWindows64 # Build a Windows 64-bit standalone.
+        platform:
+          - Windows64 # Build a Windows 64-bit standalone.
+          - Linux64   # Build a Linux 64-bit standalone.
+        buildType:
+          - Client
+          - Server
     steps:
       - uses: actions/checkout@v2
         with:
@@ -26,7 +30,7 @@ jobs:
       - uses: actions/cache@v2
         with:
           path: ${{ matrix.projectPath }}/Library
-          key: Library-${{ matrix.projectPath }}-${{ matrix.targetPlatform }}
+          key: Library-${{ matrix.projectPath }}-${{ matrix.platform }}
           restore-keys: |
             Library-${{ matrix.projectPath }}-
             Library-
@@ -34,44 +38,9 @@ jobs:
         with:
           projectPath: ${{ matrix.projectPath }}
           unityVersion: ${{ matrix.unityVersion }}
-          targetPlatform: ${{ matrix.targetPlatform }}
-          buildsPath: build-${{ matrix.targetPlatform }}-Client-Dev
-          customParameters: -Development
+          buildMethod: EditorNamespace.DevelopmentBuilder.${{ matrix.buildType }}_${{ matrix.platform }}
+          buildsPath: build-${{ matrix.platform }}-${{ matrix.buildType }}
       - uses: actions/upload-artifact@v1
         with:
-          name: Build-${{ matrix.targetPlatform }}-Client-Dev
-          path: build-${{ matrix.targetPlatform }}-Client-Dev
-  buildServerForSomePlatforms:
-    name: Build Server for ${{ matrix.targetPlatform }} on version ${{ matrix.unityVersion }}
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        projectPath:
-          - ""
-        unityVersion:
-          - 2019.4.0f1
-        targetPlatform:
-          - StandaloneWindows64 # Build a Windows 64-bit standalone.
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          lfs: true
-      - uses: actions/cache@v2
-        with:
-          path: ${{ matrix.projectPath }}/Library
-          key: Library-${{ matrix.projectPath }}-${{ matrix.targetPlatform }}
-          restore-keys: |
-            Library-${{ matrix.projectPath }}-
-            Library-
-      - uses: webbertakken/unity-builder@v1.2
-        with:
-          projectPath: ${{ matrix.projectPath }}
-          unityVersion: ${{ matrix.unityVersion }}
-          targetPlatform: ${{ matrix.targetPlatform }}
-          buildsPath: build-${{ matrix.targetPlatform }}-Server-Dev
-          customParameters: -EnableHeadlessMode -Development
-      - uses: actions/upload-artifact@v1
-        with:
-          name: Build-${{ matrix.targetPlatform }}-Server-Dev
-          path: build-${{ matrix.targetPlatform }}-Server-Dev
+          name: Build-${{ matrix.platform }}-${{ matrix.buildType }}
+          path: build-${{ matrix.platform }}-${{ matrix.buildType }}
