--- a/.github/workflows/build-prod.yml
+++ b/.github/workflows/build-prod.yml
@@ -41,7 +41,7 @@ jobs:
           projectPath: ${{ matrix.projectPath }}
           unityVersion: ${{ matrix.unityVersion }}
           buildMethod: EditorNamespace.ProdBuilder.${{ matrix.buildType }}_${{ matrix.platform }}
-      - uses: actions/upload-artifact@v1
+      - uses: actions/upload-artifact@v2
         with:
           name: ${{ matrix.platform }}-${{ matrix.buildType }}
-          path: ${{ matrix.platform }}-${{ matrix.buildType }}
+          path: ${{ matrix.platform }}-${{ matrix.buildType }}*
