--- a/.github/workflows/build-prod.yml
+++ b/.github/workflows/build-prod.yml
@@ -44,4 +44,4 @@ jobs:
       - uses: actions/upload-artifact@v2
         with:
           name: ${{ matrix.platform }}-${{ matrix.buildType }}
-          path: ${{ matrix.platform }}-${{ matrix.buildType }}*
+          path: Builds/*
