--- a/.github/workflows/build-dev.yml
+++ b/.github/workflows/build-dev.yml
@@ -19,7 +19,6 @@ jobs:
           - 2019.4.0f1
         platform:
           - Windows64 # Build a Windows 64-bit standalone.
-          - Linux64   # Build a Linux 64-bit standalone.
         buildType:
           - Client
           - Server
@@ -27,13 +26,25 @@ jobs:
       - uses: actions/checkout@v2
         with:
           lfs: true
-      - uses: actions/cache@v2
+      - name: Cache Library Folder
+        uses: actions/cache@v2
         with:
-          path: ${{ matrix.projectPath }}/Library
-          key: Library-${{ matrix.projectPath }}-${{ matrix.platform }}
+          path: Library
+          key: Library-${{ matrix.platform }}
           restore-keys: |
             Library-${{ matrix.projectPath }}-
             Library-
+      - name: Cache git lfs
+        uses: actions/cache@v2
+        with:
+          path: .git/lfs
+          key: ${{ runner.os }}-lfs-${{ hashFiles('.lfs-assets-id') }}-v1
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-
+            ${{ runner.os }}-build-
+            ${{ runner.os }}-
+      - name: Pull lfs data, if not cached
+        run: git lfs pull
       - uses: webbertakken/unity-builder@v1.2
         with:
           projectPath: ${{ matrix.projectPath }}
