--- a/.github/workflows/build-prod.yml
+++ b/.github/workflows/build-prod.yml
@@ -29,13 +29,25 @@ jobs:
       - uses: actions/checkout@v2
         with:
           lfs: true
-      - uses: actions/cache@v2
+      - name: Cache Library Folder
+        uses: actions/cache@v2
         with:
-          path: ${{ matrix.projectPath }}/Library
-          key: Library-${{ matrix.projectPath }}-${{ matrix.platform }}
+          path: Library
+          key: Library-${{ matrix.platform }}
           restore-keys: |
             Library-${{ matrix.projectPath }}-
             Library-
+      - name: Cache git lfs
+        uses: actions/cache@v2
+        with:
+          path: .git/lfs
+          key: ${{ runner.os }}-lfs-${{ hashFiles('.lfs-assets-id') }}-v1
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-
+            ${{ runner.os }}-build-
+            ${{ runner.os }}-
+      - name: Pull lfs data, if not cached
+        run: git lfs pull
       - uses: webbertakken/unity-builder@v1.2
         with:
           projectPath: ${{ matrix.projectPath }}
