--- a/.github/workflows/build-dev.yml
+++ b/.github/workflows/build-dev.yml
@@ -24,6 +24,10 @@ jobs:
           - Server
     steps:
       - uses: actions/checkout@v2
+
+      - name: Create LFS file list
+        run: git lfs ls-files -l | cut -d' ' -f1 | sort > .lfs-assets-id
+
       - name: Cache Library Folder
         uses: actions/cache@v2
         with:
@@ -32,6 +36,7 @@ jobs:
           restore-keys: |
             Library-${{ matrix.projectPath }}-
             Library-
+
       - name: Cache git lfs
         uses: actions/cache@v2
         with:
@@ -41,13 +46,16 @@ jobs:
             ${{ runner.os }}-build-${{ env.cache-name }}-
             ${{ runner.os }}-build-
             ${{ runner.os }}-
+
       - name: Pull lfs data, if not cached
         run: git lfs pull
+
       - uses: webbertakken/unity-builder@v1.2
         with:
           projectPath: ${{ matrix.projectPath }}
           unityVersion: ${{ matrix.unityVersion }}
           buildMethod: EditorNamespace.DevelopmentBuilder.${{ matrix.buildType }}_${{ matrix.platform }}
+
       - uses: actions/upload-artifact@v2
         with:
           name: ${{ matrix.platform }}-${{ matrix.buildType }}
