--- a/.github/workflows/build-dev.yml
+++ b/.github/workflows/build-dev.yml
@@ -41,7 +41,10 @@ jobs:
         uses: actions/cache@v2
         with:
           path: .git/lfs
-          key: ${{ runner.os }}-lfs-${{ hashFiles('.lfs-assets-id') }}-v1.1
+          key: ${{ runner.os }}-lfs-${{ hashFiles('.lfs-assets-id') }}
+          # use previous hashes if none is found
+          restore-keys: |
+            ${{ runner.os }}-lfs-
 
       - name: Pull lfs data, if not cached
         run: git lfs pull
