--- a/.github/workflows/build-prod.yml
+++ b/.github/workflows/build-prod.yml
@@ -45,6 +45,9 @@ jobs:
         with:
           path: .git/lfs
           key: ${{ runner.os }}-lfs-${{ hashFiles('.lfs-assets-id') }}-v1.1
+          # use previous hashes if none is found
+          restore-keys: |
+            ${{ runner.os }}-lfs-
 
       - name: Pull lfs data, if not cached
         run: git lfs pull
