Changed cache version to be version 1.2

--- a/.github/workflows/build-dev.yml
+++ b/.github/workflows/build-dev.yml
@@ -41,7 +41,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: .git/lfs
-          key: ${{ runner.os }}-lfs-${{ hashFiles('.lfs-assets-id') }}
+          key: ${{ runner.os }}-lfs-${{ hashFiles('.lfs-assets-id') }}-v1.2
           # use previous hashes if none is found
           restore-keys: |
             ${{ runner.os }}-lfs-
