--- a/.github/workflows/build-dev.yml
+++ b/.github/workflows/build-dev.yml
@@ -42,7 +42,7 @@ jobs:
         with:
           path: .git/lfs
           key: ${{ runner.os }}-lfs-${{ hashFiles('.lfs-assets-id') }}-v1.2
-          # use previous hashes if none is found
+          # use previous cache if current one is not found
           restore-keys: |
             ${{ runner.os }}-lfs-
 
