--- a/.github/disabled-workflows/build-dev.yml
+++ b/.github/disabled-workflows/build-dev.yml
@@ -24,6 +24,8 @@ jobs:
           - Server
     steps:
       - uses: actions/checkout@v2
+        with:
+          lfs: false
 
       - name: Create LFS file list
         run: git lfs ls-files -l | cut -d' ' -f1 | sort > .lfs-assets-id
