--- a/.github/workflows/build-prod.yml
+++ b/.github/workflows/build-prod.yml
@@ -27,6 +27,8 @@ jobs:
           - Server
     steps:
       - uses: actions/checkout@v2
+        with:
+          lfs: false
 
       - name: Create LFS file list
         run: git lfs ls-files -l | cut -d' ' -f1 | sort > .lfs-assets-id
