--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -11,6 +11,7 @@
     "com.unity.multiplayer-hlapi": "1.0.6",
     "com.unity.netcode": "0.2.0-preview.5",
     "com.unity.physics": "0.4.0-preview.5",
+    "com.unity.progrids": "3.0.3-preview.6",
     "com.unity.purchasing": "2.0.6",
     "com.unity.rendering.hybrid": "0.5.1-preview.18",
     "com.unity.test-framework": "1.1.14",
