--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -57,10 +57,7 @@ jobs:
           unityVersion: ${{ matrix.unityVersion }}
           testMode: ${{ matrix.testMode }}
           artifactsPath: ${{ matrix.testMode }}-artifacts
-          customParameters: |
-            -enableCodeCoverage
-            -coverageResultsPath ${{ matrix.testMode }}-artifacts
-            -coverageOptions generateHtmlReport;generateBadgeReport;assemblyFilters:+PropHunt.*,-PropHunt.Test*,-EditModeTests
+          customParameters: -enableCodeCoverage -coverageResultsPath ${{ matrix.testMode }}-artifacts -coverageOptions generateHtmlReport;generateBadgeReport;assemblyFilters:+PropHunt.*,-PropHunt.Test*,-EditModeTests
 
       - uses: actions/upload-artifact@v1
         with:
