Removed platform from test workflow

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -33,9 +33,8 @@ jobs:
         uses: actions/cache@v2
         with:
           path: Library
-          key: Library-${{ matrix.platform }}-${{ hashFiles('Packages\manifest.json') }}
+          key: Library-${{ hashFiles('Packages\manifest.json') }}
           restore-keys: |
-            Library-${{ matrix.platform }}-
             Library-
 
       - name: Cache git lfs
