Improved library caching

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -33,8 +33,9 @@ jobs:
         uses: actions/cache@v2
         with:
           path: Library
-          key: Library-${{ hashFiles('Packages\manifest.json') }}
+          key: Library-Tests-${{ hashFiles('Packages\manifest.json') }}
           restore-keys: |
+            Library-Tests-
             Library-
 
       - name: Cache git lfs
