--- a/.github/workflows/build-prod.yml
+++ b/.github/workflows/build-prod.yml
@@ -1,7 +1,7 @@
 name: Build Prod
 
-on:
-  push: { branches: [master] }
+on: [push]
+  # push: { branches: [master] }
 
 env:
   UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
