--- a/Assets/Tests/Utils/PropHunt.Tests.Utils.asmdef
+++ b/Assets/Tests/Utils/PropHunt.Tests.Utils.asmdef
@@ -7,7 +7,9 @@
         "UnityEngine.TestRunner",
         "UnityEditor.TestRunner"
     ],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": true,
     "overrideReferences": true,
