--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -66,3 +66,31 @@ jobs:
         with:
           name: Test results for ${{ matrix.testMode }}
           path: ${{ steps.tests.outputs.artifactsPath }}
+      
+      - name: sequenceCoverage
+        uses: mavrosxristoforos/get-xml-info@1.0
+        with:
+          xml-file: ${{ matrix.testMode }}-artifacts/workspace-opencov/${{ matrix.testMode }}/TestCoverageResults_0000.xml
+          xpath: '/CoverageSession/Summary@sequenceCoverage'
+      
+      - name: branchCoverage
+        uses: mavrosxristoforos/get-xml-info@1.0
+        with:
+          xml-file: ${{ matrix.testMode }}-artifacts/workspace-opencov/${{ matrix.testMode }}/TestCoverageResults_0000.xml
+          xpath: '/CoverageSession/Summary@branchCoverage'
+      
+      - uses: mshick/add-pr-comment@v1
+        with:
+          message: |
+            Sequence Coverage: ${{ steps.sequenceCoverage.outputs.info }}
+            Branch Coverage: ${{ steps.branchCoverage.outputs.info }}
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          repo-token-user-login: 'github-actions[bot]' # The user.login for temporary GitHub tokens
+          allow-repeats: false # This is the default
+      
+      - name: Assert Coverage
+        run: |
+          python3 -c "assert ${{ steps.branchCoverage.outputs.info }} >= 95, 'Branch coverage must be at least 95%, is only ${{ steps.branchCoverage.outputs.info }}%'"
+          python3 -c "assert ${{ steps.sequenceCoverage.outputs.info }} >= 95, 'Sequence coverage must be at least 95%, is only ${{ steps.sequenceCoverage.outputs.info }}%'"
+      
+      
