--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -67,6 +67,9 @@ jobs:
           name: Test results for ${{ matrix.testMode }}
           path: ${{ steps.tests.outputs.artifactsPath }}
       
+      - run: ls ${{ matrix.testMode }}-artifactsPath
+      - run: find . -name "TestCoverageResults_0000.xml"
+      
       - name: sequenceCoverage
         uses: mavrosxristoforos/get-xml-info@1.0
         with:
