--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,8 +19,8 @@ jobs:
         unityVersion:
           - 2019.4.0f1
         testMode:
-          - playmode
-          - editmode
+          # - PlayMode
+          - EditMode
     steps:
       - uses: actions/checkout@v2
         with:
