--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -67,13 +67,13 @@ jobs:
           name: Test results for ${{ matrix.testMode }}
           path: ${{ steps.tests.outputs.artifactsPath }}
       
-      - run: ls ${{ steps.tests.outputs.artifactsPath }}
-      - run: find . -name "TestCoverageResults_0000.xml"
+      - name: findCoverage
+        run: find . -name "TestCoverageResults_0000.xml"
       
       - name: sequenceCoverage
         uses: mavrosxristoforos/get-xml-info@1.0
         with:
-          xml-file: "$(find . -name 'TestCoverageResults_0000.xml')"
+          xml-file: "${{ steps.findCoverage.output }}"
           xpath: '/CoverageSession/Summary@sequenceCoverage'
       
       - name: branchCoverage
