--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -5,7 +5,7 @@ on:
   push:
     branches:
     - '**'      # matches every branch
-  pull-request:
+  pull_request:
     branches:
     - '**'      # matches every branch
 
