removing sed command

--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -26,6 +26,6 @@ jobs:
       - uses: actions/checkout@v2
       - name: "list commited files"
         id: commited-files
-        run: "git diff --name-only HEAD^ HEAD | sed ':a;N;$!ba;s/\n/;/g"
+        run: git diff --name-only HEAD^ HEAD"
       - run: dotnet tool restore # Restore dotnet tools. This handles cache implicitly.
       - run: dotnet format . --folder --include "${{steps.commited-files.outputs.result}}" --exclude Assets/Scripts/Generated Library --check # Call format but just do a check to see if everything is in order.
