using output instead of result

--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -28,4 +28,4 @@ jobs:
         id: commited-files
         run: git show --name-only
       - run: dotnet tool restore # Restore dotnet tools. This handles cache implicitly.
-      - run: dotnet format . --folder --include "${{steps.commited-files.outputs.result}}" --exclude Assets/Scripts/Generated Library --check # Call format but just do a check to see if everything is in order.
+      - run: dotnet format . --folder --include "${{steps.commited-files.outputs.output}}" --exclude Assets/Scripts/Generated Library --check # Call format but just do a check to see if everything is in order.
