restore keys for library folder

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -34,8 +34,8 @@ jobs:
         with:
           path: Library
           key: Library-Tests-${{ hashFiles('Packages/manifest.json') }}-v1.0
-          # restore-keys: |
-          #   Library-Tests-
+          restore-keys: |
+            Library-Tests-
 
       - name: Cache git lfs
         uses: actions/cache@v2
