Attempted to setup net code test world

--- a/Assets/Scripts/PropHunt.asmdef
+++ b/Assets/Scripts/PropHunt.asmdef
@@ -24,7 +24,7 @@
         "",
         ""
     ],
-    "autoReferenced": false,
+    "autoReferenced": true,
     "defineConstraints": [],
     "versionDefines": [],
     "noEngineReferences": false
