Changed code to netcode verion 0.4

--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,8 @@ crashlytics-build.properties
 
 # Ignore Code Coverage Results
 CodeCoverage
+
+# Scene dependency cache for unity
+/[Aa]ssets/SceneDependencyCache
+/[Aa]ssets/SceneDependencyCache/*
+/[Aa]ssets/SceneDependencyCache.meta
