--- a/Assets/NetCodeGenerated/PropHunt.Generated/PropHunt.Generated.asmdef
+++ b/Assets/NetCodeGenerated/PropHunt.Generated/PropHunt.Generated.asmdef
@@ -14,6 +14,7 @@
         "GUID:eb8cf780bf058694ebf7ec5cf5b8cfa3",
         "GUID:63afb046c8423dd448ae7aba042ea63d",
         "GUID:7a450cf7ca9694b5a8bfa3fd83ec635a",
+        "GUID:5f3cf485eb0554709a8abbeace890c86",
         "Unity.Networking.Transport"
     ],
     "includePlatforms": [
