Added setup for ignoring streaming assets and more generic build pipeline

--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,7 @@ CodeCoverage
 /[Aa]ssets/SceneDependencyCache
 /[Aa]ssets/SceneDependencyCache/*
 /[Aa]ssets/SceneDependencyCache.meta
+
+# Temporary assets creating for builds
+/[Aa]ssets/StreamingAssets
+/[Aa]ssets/StreamingAssets.meta
