--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,12 @@ crashlytics-build.properties
 
 # Ignore Code Coverage Results
 CodeCoverage
+
+# Scene dependency cache for unity
+/[Aa]ssets/SceneDependencyCache
+/[Aa]ssets/SceneDependencyCache/*
+/[Aa]ssets/SceneDependencyCache.meta
+
+# Temporary assets creating for builds
+/[Aa]ssets/StreamingAssets
+/[Aa]ssets/StreamingAssets.meta
