Cleaned up existing tests and removed broken test

--- a/Assets/Tests/PlayModeTests/PlayModeTests.asmdef
+++ b/Assets/Tests/PlayModeTests/PlayModeTests.asmdef
@@ -19,15 +19,15 @@
         "Unity.NetCode",
         "Unity.NetCode.Editor",
         "Unity.NetCode.Physics",
-        "Unity.NetCode.TestsUtils"
+        "Unity.NetCode.TestsUtils",
+        "Unity.Scenes"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": true,
     "overrideReferences": true,
     "precompiledReferences": [
-        "nunit.framework.dll",
-        "Moq.dll"
+        "nunit.framework.dll"
     ],
     "autoReferenced": true,
     "defineConstraints": [
